[FIX] website: remove the background color behind the affixed navbar
For some unknown reason (part of a huge refactoring during the BS3 to
BS4 migration at [1]), a background color was applied to the <header>
(behind the navbar) once it becomes fixed (after scroll if the related
header scroll effect has been chosen).
That $light color made no sense as is visible if the header uses rounded
corners but is impossible to edit / remove. As a stable fix, it was
decided to not remove it if the header uses a transparent color, in
which case mixing it with $light actually alters the whole menu color.
However, in the case of a menu background gradient, we won't respect
that stable policy.

Note: this fix is done starting from 14.0 as, in 13.0, there is no
(found) standard possibility to use rounded corners or any other way to
let that $light color appear (except using a transparent menu color, in
which case we want to keep the $light color as a stable fix anyway).

[1]: https://github.com/odoo/odoo/commit/09f40036b9c14161db90c6128861369c91c8c64e

opw-2686695

closes odoo/odoo#90047

X-original-commit: f721e6187933cde4366a7f987fb80612da581670

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -755,7 +755,17 @@ $-transition-duration: 200ms;
     display: block;
     @include o-position-absolute(0, 0, auto, 0);
     position: fixed;
-    background: $light;
+
+    // TODO remove me in master, the $light color makes no sense as is visible
+    // if the header uses rounded corners but is impossible to edit / remove.
+    // As a stable fix, it was decided to not remove it if the header uses a
+    // transparent color, in which case mixing it with $light actually alters
+    // the whole menu color. In case there is a background gradient, we suppose
+    // it is opaque and remove the $light color.
+    $-menu-color: o-color('menu-custom') or o-color('menu');
+    @if not o-website-value('menu-gradient') and (not $-menu-color or alpha($-menu-color) < 0.95) {
+        background: $light;
+    }
 
     &:not(.o_header_no_transition) {
         transition: transform $-transition-duration;
